syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jogit.server.grpc";
option java_outer_classname = "SessionProto";
package helloworld;
import "user.proto";

service SessionService {
  rpc getCurrentSession(GetCurrentSessionRequest) returns (GetCurrentSessionReply);
}

message GetCurrentSessionRequest {
  string sessionToken = 1;
}

message GetCurrentSessionReply {
  Session session = 1;
}

message Session {
  string userUsername = 1;
  string id = 2;
  User user = 3;
}
